log/build_2026-01-09_14-35-17/rbq_patrol/stderr.log
  File "/home/dev/gps_setting_ws/install/rbq_patrol/lib/python3.10/site-packages/trajectory/cmd.py", line 27
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop

